Fix swagger structure
